# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.0)
# ---------------------------------------------------------------------------- #

# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
project(
    k159
        VERSION
            1.0.0
        LANGUAGES
            C
)
# ---------------------------------------------------------------------------- #

# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
set(CMAKE_C_STANDARD 99)
# ---------------------------------------------------------------------------- #

# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
add_library(
    k159
        src/k159.c
        src/k159.h
)

target_include_directories(
    k159
        PRIVATE
            src
)

target_link_libraries(
    k159
        usb-1.0
)
# ---------------------------------------------------------------------------- #

# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
add_executable(
    k159-cli
        src/k159-cli.c
)

target_include_directories(
    k159-cli
        PRIVATE
            src
)

target_link_libraries(
    k159-cli
        k159
)
# ---------------------------------------------------------------------------- #
